--- a/NewsApp/View/Base.lproj/Main.storyboard
+++ b/NewsApp/View/Base.lproj/Main.storyboard
@@ -19,32 +19,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fZi-tI-bIT">
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="basicCell" textLabel="bBi-An-5VJ" detailTextLabel="Jz3-yU-Uol" style="IBUITableViewCellStyleSubtitle" id="mmZ-Iq-dEl">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mmZ-Iq-dEl" id="YY8-Gx-rCJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bBi-An-5VJ">
-                                                    <rect key="frame" x="20" y="6.0000000000000009" width="25" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jz3-yU-Uol">
-                                                    <rect key="frame" x="19.999999999999996" y="22.333333333333336" width="43.666666666666664" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -63,7 +37,66 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057.2519083969464" y="-28.169014084507044"/>
+            <point key="canvasLocation" x="915" y="-28"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="fzY-ro-uhd">
+            <objects>
+                <viewController storyboardIdentifier="Detail" id="AZj-mk-xdy" customClass="DetailViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ToO-ND-CrQ">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j8C-yN-3ky">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bJ2-s6-LCy">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="20.333333333333332"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9y-2t-mEL">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="U9y-2t-mEL" secondAttribute="trailing" id="Co6-KS-xko"/>
+                                            <constraint firstAttribute="bottom" secondItem="U9y-2t-mEL" secondAttribute="bottom" id="HLz-j0-upW"/>
+                                            <constraint firstItem="U9y-2t-mEL" firstAttribute="top" secondItem="bJ2-s6-LCy" secondAttribute="top" id="o35-fE-vt2"/>
+                                            <constraint firstItem="U9y-2t-mEL" firstAttribute="leading" secondItem="bJ2-s6-LCy" secondAttribute="leading" id="qHu-Rj-plY"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="bJ2-s6-LCy" firstAttribute="trailing" secondItem="LK9-W7-9sS" secondAttribute="trailing" id="Mbb-IC-i8X"/>
+                                    <constraint firstItem="bJ2-s6-LCy" firstAttribute="bottom" secondItem="LK9-W7-9sS" secondAttribute="bottom" id="SXZ-y6-cyG"/>
+                                    <constraint firstItem="LK9-W7-9sS" firstAttribute="top" secondItem="bJ2-s6-LCy" secondAttribute="top" id="TQ0-aS-0dY"/>
+                                    <constraint firstItem="bJ2-s6-LCy" firstAttribute="leading" secondItem="LK9-W7-9sS" secondAttribute="leading" id="fVt-v0-tlW"/>
+                                    <constraint firstItem="bJ2-s6-LCy" firstAttribute="width" secondItem="C22-VP-hXr" secondAttribute="width" id="kuq-1y-p1e"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="LK9-W7-9sS"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="C22-VP-hXr"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="tHd-HI-hHR"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="j8C-yN-3ky" firstAttribute="leading" secondItem="tHd-HI-hHR" secondAttribute="leading" id="a4V-PS-Q2H"/>
+                            <constraint firstItem="j8C-yN-3ky" firstAttribute="top" secondItem="tHd-HI-hHR" secondAttribute="top" id="dAa-4J-jYo"/>
+                            <constraint firstItem="tHd-HI-hHR" firstAttribute="bottom" secondItem="j8C-yN-3ky" secondAttribute="bottom" id="feO-l3-GKq"/>
+                            <constraint firstItem="tHd-HI-hHR" firstAttribute="trailing" secondItem="j8C-yN-3ky" secondAttribute="trailing" id="gTx-zr-RwK"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="detailLabel" destination="U9y-2t-mEL" id="Cwb-nG-ZLf"/>
+                        <outlet property="scrollView" destination="j8C-yN-3ky" id="Or2-XT-1wR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6ze-Ae-vRU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1676" y="-28"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aoB-Jl-dzc">
