--- a/NewsApp/View/CustomTableViewCell.xib
+++ b/NewsApp/View/CustomTableViewCell.xib
@@ -9,24 +9,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="NewsApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="398" height="86"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="116" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="NewsApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="423" height="116"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="398" height="86"/>
+                <rect key="frame" x="0.0" y="0.0" width="423" height="116"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="qwe-ll-mib">
-                        <rect key="frame" x="0.0" y="0.0" width="318" height="73.666666666666671"/>
+                    <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qwe-ll-mib">
+                        <rect key="frame" x="10" y="32.666666666666671" width="343" height="50.666666666666671"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VpJ-xC-dCg">
-                                <rect key="frame" x="0.0" y="0.0" width="318" height="20.333333333333332"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VpJ-xC-dCg">
+                                <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b36-CF-l4b">
-                                <rect key="frame" x="0.0" y="53.333333333333336" width="318" height="20.333333333333336"/>
+                                <rect key="frame" x="0.0" y="30.333333333333336" width="343" height="20.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -34,20 +34,18 @@
                         </subviews>
                     </stackView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ios-checkmark-circle-11" translatesAutoresizingMaskIntoConstraints="NO" id="fBS-29-Mxc">
-                        <rect key="frame" x="338" y="20" width="40" height="40"/>
+                        <rect key="frame" x="373" y="43" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="40" id="6Ww-Me-y9C"/>
-                            <constraint firstAttribute="height" constant="40" id="jc3-x7-NOI"/>
+                            <constraint firstAttribute="width" constant="30" id="6Ww-Me-y9C"/>
+                            <constraint firstAttribute="height" constant="30" id="jc3-x7-NOI"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="qwe-ll-mib" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8ek-i2-aBd"/>
-                    <constraint firstAttribute="bottom" secondItem="qwe-ll-mib" secondAttribute="bottom" id="PT6-Q4-o1C"/>
-                    <constraint firstAttribute="bottom" secondItem="fBS-29-Mxc" secondAttribute="bottom" constant="20" id="UwO-Qb-0IA"/>
+                    <constraint firstItem="qwe-ll-mib" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="8ek-i2-aBd"/>
+                    <constraint firstItem="fBS-29-Mxc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Jpc-RK-YOv"/>
+                    <constraint firstItem="qwe-ll-mib" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Tky-kH-uaP"/>
                     <constraint firstAttribute="trailing" secondItem="fBS-29-Mxc" secondAttribute="trailing" constant="20" id="a03-49-Aeo"/>
-                    <constraint firstItem="fBS-29-Mxc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="iUW-k7-hZX"/>
-                    <constraint firstItem="qwe-ll-mib" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="qFt-nW-amd"/>
                     <constraint firstItem="fBS-29-Mxc" firstAttribute="leading" secondItem="qwe-ll-mib" secondAttribute="trailing" constant="20" id="xn5-tX-cS6"/>
                 </constraints>
             </tableViewCellContentView>
@@ -57,7 +55,7 @@
                 <outlet property="checkmarkImage" destination="fBS-29-Mxc" id="O9l-fL-Wy3"/>
                 <outlet property="titleLabel" destination="VpJ-xC-dCg" id="O8e-ph-3kw"/>
             </connections>
-            <point key="canvasLocation" x="189.31297709923663" y="2.1126760563380285"/>
+            <point key="canvasLocation" x="208.3969465648855" y="12.67605633802817"/>
         </tableViewCell>
     </objects>
     <resources>
