--- a/NewsApp/View/Base.lproj/Main.storyboard
+++ b/NewsApp/View/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xj2-CL-Bzx">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -47,20 +48,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j8C-yN-3ky">
-                                <rect key="frame" x="20" y="69" width="353" height="739"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j8C-yN-3ky">
+                                <rect key="frame" x="20" y="59" width="353" height="749"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bJ2-s6-LCy">
-                                        <rect key="frame" x="0.0" y="0.0" width="353" height="300.33333333333331"/>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bJ2-s6-LCy" userLabel="Container View">
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="280.33333333333331"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kjK-ZE-5DP">
-                                                <rect key="frame" x="20" y="20" width="333" height="250"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="250" id="uKX-Ay-lKI"/>
-                                                </constraints>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kjK-ZE-5DP">
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="250"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9y-2t-mEL">
-                                                <rect key="frame" x="0.0" y="280" width="353" height="20.333333333333314"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9y-2t-mEL">
+                                                <rect key="frame" x="0.0" y="260" width="353" height="20.333333333333314"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -68,12 +67,8 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="kjK-ZE-5DP" secondAttribute="trailing" id="BES-CI-Xhe"/>
                                             <constraint firstAttribute="trailing" secondItem="U9y-2t-mEL" secondAttribute="trailing" id="Co6-KS-xko"/>
                                             <constraint firstAttribute="bottom" secondItem="U9y-2t-mEL" secondAttribute="bottom" id="HLz-j0-upW"/>
-                                            <constraint firstItem="kjK-ZE-5DP" firstAttribute="top" secondItem="bJ2-s6-LCy" secondAttribute="top" constant="20" symbolic="YES" id="R0i-tC-oMk"/>
-                                            <constraint firstItem="kjK-ZE-5DP" firstAttribute="leading" secondItem="bJ2-s6-LCy" secondAttribute="leading" constant="20" symbolic="YES" id="WiE-co-kk2"/>
-                                            <constraint firstItem="U9y-2t-mEL" firstAttribute="top" secondItem="kjK-ZE-5DP" secondAttribute="bottom" constant="10" id="o35-fE-vt2"/>
                                             <constraint firstItem="U9y-2t-mEL" firstAttribute="leading" secondItem="bJ2-s6-LCy" secondAttribute="leading" id="qHu-Rj-plY"/>
                                         </constraints>
                                     </view>
@@ -93,13 +88,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="j8C-yN-3ky" firstAttribute="leading" secondItem="tHd-HI-hHR" secondAttribute="leading" constant="20" id="a4V-PS-Q2H"/>
-                            <constraint firstItem="j8C-yN-3ky" firstAttribute="top" secondItem="tHd-HI-hHR" secondAttribute="top" constant="10" id="dAa-4J-jYo"/>
+                            <constraint firstItem="j8C-yN-3ky" firstAttribute="top" secondItem="tHd-HI-hHR" secondAttribute="top" id="dAa-4J-jYo"/>
                             <constraint firstItem="tHd-HI-hHR" firstAttribute="bottom" secondItem="j8C-yN-3ky" secondAttribute="bottom" constant="10" id="feO-l3-GKq"/>
                             <constraint firstItem="tHd-HI-hHR" firstAttribute="trailing" secondItem="j8C-yN-3ky" secondAttribute="trailing" constant="20" id="gTx-zr-RwK"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="articleImageView" destination="kjK-ZE-5DP" id="M8x-sF-xkc"/>
+                        <outlet property="containerView" destination="bJ2-s6-LCy" id="LTR-Zp-Q9K"/>
                         <outlet property="detailLabel" destination="U9y-2t-mEL" id="Cwb-nG-ZLf"/>
                         <outlet property="scrollView" destination="j8C-yN-3ky" id="Or2-XT-1wR"/>
                     </connections>
