--- a/NewsApp/View/Base.lproj/Main.storyboard
+++ b/NewsApp/View/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fZi-tI-bIT">
-                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -30,14 +30,53 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fZi-tI-bIT" secondAttribute="trailing" id="eO1-qx-VI7"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="mostRecent" id="jdE-uE-znU"/>
                     <navigationItem key="navigationItem" id="pz9-JX-WN2"/>
                     <connections>
-                        <outlet property="articlesTable" destination="fZi-tI-bIT" id="bkY-5v-dLA"/>
+                        <outlet property="tableView" destination="fZi-tI-bIT" id="bkY-5v-dLA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="915" y="-28"/>
+            <point key="canvasLocation" x="1840.4580152671756" y="-28.169014084507044"/>
+        </scene>
+        <!--Favorites View Controller-->
+        <scene sceneID="qRa-S2-AKf">
+            <objects>
+                <viewController id="qWH-Ad-5Ky" customClass="FavoritesViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WGF-m7-76R">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="X0r-xI-2Ew">
+                                <rect key="frame" x="0.0" y="103" width="393" height="516"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="GhP-pr-d8t">
+                                    <size key="itemSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ofo-cm-Ofc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="X0r-xI-2Ew" firstAttribute="bottom" secondItem="ofo-cm-Ofc" secondAttribute="bottom" constant="-150" id="2Me-V9-TQ8"/>
+                            <constraint firstItem="X0r-xI-2Ew" firstAttribute="leading" secondItem="ofo-cm-Ofc" secondAttribute="leading" id="Deo-rM-KvY"/>
+                            <constraint firstItem="ofo-cm-Ofc" firstAttribute="trailing" secondItem="X0r-xI-2Ew" secondAttribute="trailing" id="P9H-Ez-633"/>
+                            <constraint firstItem="X0r-xI-2Ew" firstAttribute="top" secondItem="ofo-cm-Ofc" secondAttribute="top" id="Rpe-He-Klo"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="l3R-LI-Enb"/>
+                    <connections>
+                        <outlet property="collectionView" destination="X0r-xI-2Ew" id="DG2-3a-xsd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bsK-8t-Nj0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1910.6870229007632" y="842.95774647887333"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="fzY-ro-uhd">
@@ -71,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6ze-Ae-vRU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1676" y="-28"/>
+            <point key="canvasLocation" x="2602.290076335878" y="-28.169014084507044"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aoB-Jl-dzc">
@@ -84,12 +123,31 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="lNF-Yz-ISx"/>
+                        <segue destination="gbk-V6-xWi" kind="relationship" relationship="rootViewController" id="lNF-Yz-ISx"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xaq-iC-e9I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="130.53435114503816" y="-28.169014084507044"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="EOU-KC-UYQ">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="gbk-V6-xWi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="pmM-HA-z0i"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yBI-Ay-3SM">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="7bg-zW-fCw"/>
+                        <segue destination="qWH-Ad-5Ky" kind="relationship" relationship="viewControllers" id="maD-c2-74W"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hSe-5F-XJH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="913.74045801526711" y="-28.169014084507044"/>
         </scene>
     </scenes>
     <resources>
